<resources>
    <string name="app_name">TIVA Calc</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-3071841906959757/9176946029</string>
    
    <string name="reset">Reset</string>

    <string name="appTitle">TIVA Calculator</string>

    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="cm">Centimetres</string>

    <string name="stones">Stones</string>
    <string name="lbs">Pounds</string>
    <string name="kg">Kilograms</string>

    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <string name="drugCalc">Drug Calculator</string>
    <string name="heightCalc">Height Calculator</string>
    <string name="weightCalc">Weight Calculator</string>
    <string name="gender">Gender</string>
    <string name="ageCalc">Age Calculator</string>
    <string name="calcVals">Calculated Values</string>
    <string name="vol">Volume</string>
    <string name="total">Total</string>
    <string name="conc">Conc.</string>
    <string name="ml">ml.</string>
    <string name="equals">=</string>
    <string name="micrograms">mcg</string>
    <string name="milligrams">mg</string>
    <string name="microgml">mcg/ ml</string>
    <string name="resetButtonAltText">resetButton</string>
    <string name="settingsButtonAltText">settingsButton</string>

    <string-array name="height_array_full">
        <item>Feet/ Inches</item>
        <item>Centimetres</item>
    </string-array>

    <string-array name="height_array_abbrev">
        <item>Ft/ In</item>
        <item>Cm</item>
    </string-array>

    <string-array name="weight_array_full">
        <item>Stones/ Pounds</item>
        <item>Pounds</item>
        <item>Kilograms</item>
    </string-array>

    <string-array name="weight_array_abbrev">
        <item>St/ Lbs</item>
        <item>Lbs</item>
        <item>Kg</item>
    </string-array>

</resources>
